--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,11 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+    <!--GOOGLE API-->
+    <script src="https://apis.google.com/js/platform.js"></script>
+    <meta name="google-signin-client_id" content="687798220463-9octepf7knnos10j9m8oqgav5fqgl803.apps.googleusercontent.com">
+
 </head>
 
 <body class="fix-header card-no-border fix-sidebar">
